@@ -1,5 +1,10 @@
 2002-06-17  Alan Modra  <amodra@bigpond.net.au>
 
+	* opncls.c (bfd_openr): Remove redundant bfd_set_error.
+	(bfd_fdopenr): Likewise.
+	(bfd_openstreamr): Likewise.
+	(bfd_openw): Likewise.
+
 	* targets.c: Sort target vecs.
 	(_bfd_target_vector): Add aix5coff64_vec, bfd_elf32_sh64_vec,
 	bfd_elf32_sh64l_vec, bfd_elf32_sh64lnbsd_vec,
